--- a/crew.html
+++ b/crew.html
@@ -20,10 +20,10 @@
                 <span class="crew-line"></span>
                 <nav class="crew-header__crew-navbar-list crew-list">
                     <ul class="crew-list__crew-content">
-                        <li class="crew-list__crew-item"><a href="./index.html"><span class="crew-list__crew-span">00</span>HOME</a></li>
-                        <li class="crew-list__crew-item"><a href="./destination.html"><span class="crew-list__crew-span">01</span>DESTINATION</a></li>
-                        <li class="crew-list__crew-item"><a href="./crew.html"><span class="crew-list__crew-span">02</span>CREW</a></li>
-                        <li class="crew-list__crew-item"><a href="./technology.html"><span class="crew-list__crew-span">03</span>TECHNOLOGY</a></li>
+                        <li class="crew-list__crew-item"><a class="crew-link" href="./index.html"><span class="crew-list__crew-span">00</span>HOME</a></li>
+                        <li class="crew-list__crew-item"><a class="crew-link" href="./destination.html"><span class="crew-list__crew-span">01</span>DESTINATION</a></li>
+                        <li class="crew-list__crew-item"><a class="crew-link" href="./crew.html"><span class="crew-list__crew-span">02</span>CREW</a></li>
+                        <li class="crew-list__crew-item"><a class="crew-link" href="./technology.html"><span class="crew-list__crew-span">03</span>TECHNOLOGY</a></li>
                     </ul>
                 </nav>
             </div>
@@ -51,13 +51,13 @@
     </main>
     <!-- Site Main end -->
     <!-- Site Footer start -->
-    <footer class="site-footer">
+    <!-- <footer class="site-footer">
         <div class="container">
             <div class="footer">
-                <!-- ... -->
+                
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- Site Footer end -->
 </body>
 </html>
